# Clinical-Decision-Support-System-Prototype

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  start_worker.sh  worker_health.py
app/: main.py
app/frontend/: index.html  result.html
app/models/: job.py
app/routers/: jobs.py
app/services/: ai.py  database.py  pdf_extractor.py  storage.py  terminology.py
app/workers/: tasks.py
frontend/: result.html
migrations/: env.py
migrations/versions/: ef163be910cf_create_jobs_table.py
tests/: conftest.py  test_ai_validation.py  test_clinical_cases.py  test_endpoints.py  test_pdf_extraction.py  test_retry_classification.py  test_terminology.py  test_worker_task.py
tests/fixtures/: clinical_cases.py
