[project]
name = "symptom-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "supabase>=2.30.0",
    "uvicorn>=0.47.0",
]
